--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,7 @@
   --normalFontSize: 0.938rem;
   --smallFontSize: 0.813rem;
   --smallestFontSize: 0.75rem;
+  --footerFontSize: 0.65rem;
 }
 
 a {
@@ -52,6 +53,7 @@ li {
 
 body {
   background: var(--paleColor);
+  overflow-x: hidden;
 }
 
 .font-pjs {
@@ -72,4 +74,20 @@ body {
 
 .bgPale {
   background: var(--paleColor);
+}
+
+.colorPrim {
+  color: var(--primaryColor);
+}
+
+.colorSec {
+  color: var(--secondaryColor);
+}
+
+.colorPale {
+  color: var(--paleColor);
+}
+
+.text-footer {
+  font-size: var(--footerFontSize);
 }/*# sourceMappingURL=App.css.map */
